[project]
name = "stl10-project"
version = "0.1.0"
description = "STL-10 image classification course project managed by uv."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "tqdm>=4.66",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120
